crates/opi-tui/tests/snapshots/session_branching_snapshots__branch_picker_cjk_labels_40x10.snap
---
source: crates/opi-tui/tests/session_branching_snapshots.rs
expression: "render(widget, 40, 10)"
---
┌ Branches ────────────────────────────┐
│>  * 主 分 支  会 话              12 条 消 息 │
│   修 复 路 径                    8 条 消 息 │
│   検 証 ブ ラ ン チ                    3 件 │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
