crates/opi-tui/tests/snapshots/session_branching_snapshots__branch_picker_empty_80x24.snap
---
source: crates/opi-tui/tests/session_branching_snapshots.rs
expression: "render(widget, 80, 24)"
---
┌ Branches ────────────────────────────────────────────────────────────────────┐
│No branches                                                                   │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
