crates/opi-tui/tests/snapshots/session_branching_snapshots__branch_picker_monokai_theme_80x24.snap
---
source: crates/opi-tui/tests/session_branching_snapshots.rs
expression: "render(widget, 80, 24)"
---
┌ Branches ────────────────────────────────────────────────────────────────────┐
│>  * Main conversation                                              5 messages│
│   Branch A                                                         3 messages│
│   Branch B                                                         2 messages│
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
