crates/opi-tui/tests/snapshots/session_branching_snapshots__branch_picker_second_selected_120x40.snap
---
source: crates/opi-tui/tests/session_branching_snapshots.rs
expression: "render(widget, 120, 40)"
---
┌ Branches ────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ * Main conversation                                                                                        5 messages│
│>    Branch A                                                                                               3 messages│
│   Branch B                                                                                                 2 messages│
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
