crates/opi-tui/tests/snapshots/session_branching_snapshots__branch_picker_two_branches_80x24.snap
---
source: crates/opi-tui/tests/session_branching_snapshots.rs
expression: "render(widget, 80, 24)"
---
┌ Branches ────────────────────────────────────────────────────────────────────┐
│>  * Trunk                                                                3 ms│
│   Alt path                                                             2 msgs│
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
